# vc-panel

./: .gitignore  LICENSE  README.md  _test_qt.py  _test_qt.spec  installer.iss  main.py  pyproject.toml  setup_freeze.py  vc.spec
assets/: make_icon.py
core/: base_manager.py  registry.py
hooks/: rthook_pyqt6.py
providers/: _svc_win.py  apache.py  base_service.py  dotnet.py  global_tools.py  go.py  java.py  mongodb.py  mysql.py  nginx.py  node.py  php.py  postgresql.py  python.py  redis.py  rust.py  traefik.py
storage/: config.py  db.py
ui/: app.py  sidebar.py  theme.py
ui/pages/: about.py  dashboard.py  database_page.py  db_port_dialog.py  php_extensions_dialog.py  php_settings_dialog.py  project_config.py  settings.py  tools_page.py  version_manager.py  web_server_page.py
ui/widgets/: progress_dialog.py  update_banner.py
utils/: downloader.py  path_manager.py  platform_utils.py  resource_path.py  shell.py  startup.py  updater.py
